--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-floating-whatsapp": "^5.0.8",
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
